issue #856 - highlight for not collapsing accordion removed

--- a/public/project-admin-views/assets/css/style.css
+++ b/public/project-admin-views/assets/css/style.css
@@ -9682,9 +9682,11 @@ small.help-text {
 }
 .accord-questionSummary .questionSummary__head {
   padding: 15px 15px;
+  background: #ffffff;
+  border-bottom: 1px solid #ddd;
 }
 .accord-questionSummary a.accordion-toggle.collapsed .questionSummary__head {
-  background: #FAFAFA;
+  background: #ffffff;
   border-bottom: 1px solid #ddd;
 }
 .accord-questionSummary a.accordion-toggle .questionSummary__head {
@@ -9952,7 +9954,7 @@ small.help-text {
 }
 .dd.draggableList.dark .dd-list .dd-item {
   margin: 0;
-  background: #FAFAFA;
+  background: #ffffff;
   border-bottom: 1px solid #ddd;
   padding: 10px 5px;
 }
