--- a/public/project-admin-views/assets/less/custom.less
+++ b/public/project-admin-views/assets/less/custom.less
@@ -1918,11 +1918,13 @@ small.help-text{
 .accord-questionSummary{
   .questionSummary__head{
     padding: 15px 15px;
+    background: @color-white;
+    border-bottom: 1px solid #ddd;
   }
   a.accordion-toggle{
     &.collapsed{
       .questionSummary__head{
-        background: #FAFAFA;
+        background: @color-white;
         border-bottom: 1px solid #ddd;
       }
     }
@@ -2266,7 +2268,7 @@ small.help-text{
   .dd-list{
     .dd-item{
       margin: 0;
-      background: #FAFAFA;
+      background: @color-white;
       border-bottom: 1px solid #ddd;
       padding: 10px 5px;
       .dd-handle{
